<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <com.hisilicon.multiscreen.mirror.MirrorView
        android:id="@+id/MirrorView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:keepScreenOn="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/control_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" >

        <LinearLayout
            android:id="@+id/error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app"
                android:src="@drawable/mirror_error" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/image_error_title"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/error_title"
            android:layout_centerHorizontal="true"
            android:text="@string/image_error_info"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/control_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/image_control_right"
        android:gravity="right" >

        <Button
            android:id="@+id/control_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/image_control_close_select" >
        </Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="20dp" >

            <Button
                android:id="@+id/control_back"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_control_back_select"
                android:contentDescription="@string/app_name" />

            <Button
                android:id="@+id/control_more"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/image_control_more_select"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>